--- a/templates/questionnaire/questionnaire.html
+++ b/templates/questionnaire/questionnaire.html
@@ -16,7 +16,8 @@
 						</div>
 						<!-- Breadcrumbs -->
 						<div class="col-md-6 title-breadcrumbs">
-							<a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaires</a>							<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Manage Questionnaires</strong></span>
+							<a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaires</a>
+							<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Manage Questionnaires</strong></span>
 						</div>
 					</div>
 					<div class="row clearfix operations">
