Added listing view and deletion for Question Type

--- a/templates/questionnaire/delete.question.html
+++ b/templates/questionnaire/delete.question.html
@@ -3,7 +3,7 @@
 		<span class="glyphicon glyphicon-trash"></span> Delete Question 
 	</h2>
 	<p class="modal-title-caption col-xs-12">
-		{{questionToDelete.text_EN}} / {{questionToDelete.text_EN}}
+		{{questionToDelete.text_EN}} / {{questionToDelete.text_FR}}
 	</p>
 </div>
 <div class="modal-body">
