--- a/templates/questionnaire/delete.question.type.html
+++ b/templates/questionnaire/delete.question.type.html
@@ -3,14 +3,14 @@
 		<span class="glyphicon glyphicon-trash"></span> Delete Question 
 	</h2>
 	<p class="modal-title-caption col-xs-12">
-		{{questionToDelete.text_EN}} / {{questionToDelete.text_EN}}
+		{{questionTypeToDelete.name_EN}} / {{questionTypeToDelete.name_FR}}
 	</p>
 </div>
 <div class="modal-body">
 	<div class="alert alert-danger" role="alert">
-    <strong>Delete Question</strong><br>
+    <strong>Delete answer type</strong><br>
     <p>
-      Are you sure you want to delete the question "{{questionToDelete.text_EN}}" ?
+      Are you sure you want to delete the answer type "{{questionTypeToDelete.name_EN}}" ?
     </p>
   </div>
   <div class="row">
