Coding the add a response type.

--- a/templates/questionnaire/questionnaire-main-menu.html
+++ b/templates/questionnaire/questionnaire-main-menu.html
@@ -100,10 +100,10 @@
 											<span class="fa fa-question-circle-o fa-sm" aria-hidden="true"></span>
 										</div>
 										<div class="panel-title">
-											<h1>Answer Types</h1>
+											<h1>Response Types</h1>
 										</div>
 										<div class="panel-description">
-											<p>Create, view, update and delete questions types.</p>
+											<p>Create, view, update and delete response types.</p>
 										</div>
 									</div>
 								</div>
