--- a/templates/questionnaire/questionnaire-side-menu.html
+++ b/templates/questionnaire/questionnaire-side-menu.html
@@ -76,7 +76,7 @@
                 <div class="side-panel-info-sm" ng-class="{active: currentPage == 'questionnaire/question-type'}">
                     <div class="panel-content">
                         <span style="font-size: 23px;vertical-align:middle" class="fa fa-question-circle-o" aria-hidden="true"></span>
-                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Answer Types</strong></h6>
+                        <h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Response Types</strong></h6>
                     </div>
                 </div>
             </div>
