--- a/templates/questionnaire/question.type.html
+++ b/templates/questionnaire/question.type.html
@@ -12,7 +12,7 @@
             			<!-- Page title -->
 						<div class="col-xs-12 col-md-9 title-content">
 							<span class="fa fa-search"></span>
-							<h1><strong>Manage types of answer</strong></h1>
+							<h1><strong>Manage types of response</strong></h1>
 						</div>
             			<!-- Breadcrumbs -->
 						<div class="col-md-3 title-breadcrumbs">
