--- a/templates/questionnaire/add.question.type.html
+++ b/templates/questionnaire/add.question.type.html
@@ -146,7 +146,7 @@
 
                         <!-- Submit button -->
                         <div class="panel-container">
-                            <a href="" ng-click="submitQuestion()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" ng-if="checkForm()" style="width: 100%;">
+                            <a href="" ng-click="addNewQuestionType()" ng-if="checkForm()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" style="width: 100%;">
                                 <span style="font-size: 20px;"><strong>Submit Question</strong></span>
                             </a>
                         </div>
@@ -196,13 +196,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="mobile-summary col-xs-12 col-sm-offset-2 col-sm-5" ng-if="checkForm()">
+<!--                        <div class="mobile-summary col-xs-12 col-sm-offset-2 col-sm-5" ng-if="checkForm()">
                             <div class="panel-container">
                                 <a href="" ng-click="submitQuestion()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" ng-if="checkForm()" style="width: 100%;">
                                     <span style="font-size: 20px;"><strong>Submit Question</strong></span>
                                 </a>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
 
                     <div class="section-content">
@@ -284,20 +284,20 @@
                                 <div class="panel-container">
                                     <form name="newAtForm">
                                         <div class="col-xs-12">
-                                            <select class="form-control" name="atCategory" style="width:60%;" ng-model="atCategory" ng-options="atCat.category_EN for atCat in atCatList" required>
-                                                <option value="">-- select a response category --</option>
+                                            <select class="form-control" name="atCategory" style="width:60%;" ng-change="updateQuestionType(atCategory);checkCompletion();" ng-model="atCategory" ng-options="atCat.category_EN for atCat in atCatList" required>
+                                                <option value="" disabled>-- select a response category --</option>
                                             </select>
                                         </div>
 
                                         <!-- Add multiple choice options -->
                                         <div class="col-xs-12" ng-show="atCategory.category_EN === 'Checkbox' || atCategory.category_EN === 'Radio Button'">
                                             <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in newQuestionType.options">
-                                                <input class="form-control" style="width:20%" type="number" placeholder="Position" ng-model="option.order" min="1" max="{{newQuestionType.options.length}}" ng-change="orderPreview()" required/>
-                                                <input class="form-control" style="width:40%" type="text" placeholder="Text (EN)" ng-model="option.name_EN" required/>
-                                                <input class="form-control" style="width:40%" type="text" placeholder="Text (FR)" ng-model="option.name_FR" required/>
-                                                <span class="input-group-btn"><button class="btn btn-default" ng-click="deleteOptions(option)"><span class="fa fa-minus"></span> Delete</button></span>
+                                                <input ng-change="checkCompletion();" class="form-control" style="width:20%" type="number" placeholder="Position" ng-model="option.order" min="1" max="{{newQuestionType.options.length}}" ng-change="orderPreview()" required/>
+                                                <input ng-change="checkCompletion();" class="form-control" style="width:40%" type="text" placeholder="Text (EN)" ng-model="option.text_EN" required/>
+                                                <input ng-change="checkCompletion();" class="form-control" style="width:40%" type="text" placeholder="Text (FR)" ng-model="option.text_FR" required/>
+                                                <span class="input-group-btn"><button class="btn btn-default" ng-click="deleteOptions(option);checkCompletion();"><span class="fa fa-minus"></span> Delete</button></span>
                                             </div>
-                                            <button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addOptions()"><span class="fa fa-plus"></span> Add option</button>
+                                            <button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addOptions(xfdgdfsgfrdsgdfghdfdfgdf);"><span class="fa fa-plus"></span> Add option</button>
                                         </div>
 
                                         <!-- Add textbox options -->
@@ -308,46 +308,56 @@
                                         <!-- Add Sliders options -->
                                         <div class="col-xs-12" ng-show="atCategory.category_EN === 'Slider'">
                                             <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                                                <input class="form-control" style="width:20%" type="number" placeholder="Minimum value" ng-model="newQuestionType.slider.minValue" min="1" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider()"/>
-                                                <input class="form-control" style="width:35%" type="text" ng-model="newQuestionType.slider.minCaption_EN" placeholder="Minimum caption (EN)" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider()" />
-                                                <input class="form-control" style="width:35%" type="text" ng-model="newQuestionType.slider.minCaption_FR" placeholder="Minimum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider()" />
+                                                <div style="display: block; float: left;width: 16%;">&nbsp;</div>
+                                                <div style="display: block; float: left;width: 16%;">Value</div>
+                                                <div style="display: block; float: left;width: 29%;">English</div>
+                                                <div style="display: block; float: left;width: 29%;">French</div>
                                             </div>
                                             <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                                                <input class="form-control" style="width:20%" type="number" placeholder="Maximum value" ng-model="newQuestionType.slider.maxValue" min="1" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider()" />
-                                                <input class="form-control" style="width:35%" type="text" ng-model="newQuestionType.slider.maxCaption_EN" placeholder="Maximum caption (EN)" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider()" />
-                                                <input class="form-control" style="width:35%" type="text" ng-model="newQuestionType.slider.maxCaption_FR" placeholder="Maximum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider()" />
+                                                <span class="input-group-addon">&nbsp; Minimum settings</span>
+                                                <input class="form-control" style="width:20%" type="number" placeholder="Minimum value" ng-model="newQuestionType.minValue" min="1" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider();checkCompletion();"/>
+                                                <input class="form-control" style="width:35%" type="text" ng-model="newQuestionType.minCaption_EN" placeholder="Minimum caption (EN)" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider();checkCompletion();" />
+                                                <input class="form-control" style="width:35%" type="text" ng-model="newQuestionType.minCaption_FR" placeholder="Minimum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider();checkCompletion();" />
                                             </div>
                                             <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
-                                                <input class="form-control" style="width:20%" type="number" placeholder="Increment step" ng-model="newQuestionType.slider.increment" min="1" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider()" />
+                                                <span class="input-group-addon">&nbsp;Maximum settings</span>
+                                                <input class="form-control" style="width:20%" type="number" placeholder="Maximum value" ng-model="newQuestionType.maxValue" min="1" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider();checkCompletion();" />
+                                                <input class="form-control" style="width:35%" type="text" ng-model="newQuestionType.maxCaption_EN" placeholder="Maximum caption (EN)" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider();checkCompletion();" />
+                                                <input class="form-control" style="width:35%" type="text" ng-model="newQuestionType.maxCaption_FR" placeholder="Maximum caption (FR)" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider();checkCompletion();" />
+                                            </div>
+                                            <div class="input-group" style="margin-top:10px; margin-bottom:10px;width:100%;">
+                                                <span class="input-group-addon">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Increment&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                                <input class="form-control" style="width:20%" type="number" placeholder="Increment step" ng-model="newQuestionType.increment" min="1" ng-required="atCategory.category_EN === 'Slider'" ng-change="updateSlider();checkCompletion();" />
                                             </div>
                                         </div>
                                     </form>
                                 </div>
                             </div>
-                            <div class="col-xs-12 col-md-4">
+                            <div class="col-xs-12 col-md-4" ng-if="atCategory.category_EN === 'Radio Button' || atCategory.category_EN === 'Checkbox' || atCategory.category_EN === 'Slider' || atCategory.category_EN === 'Text box'">
                                 <p style="margin-bottom: 10px;">
-                                    <span style="font-size: 20px;"><strong>Preview </strong></span>
+                                    <span style="font-size: 20px;"><strong>Preview</strong></span>
                                 </p>
 
                                 <!-- Preview -->
                                 <div class="col-xs-12">
                                     <h4>English</h4>
                                     <!-- Show category -->
-                                    <div ng-if="selectedAt.typeSerNum === '4'">
-                                        <div ng-repeat="option in newQuestionType.options">
-                                            <label><input type="radio" name="option"/> {{option.name_EN}}</label>
+                                    <div ng-if="atCategory.category_EN === 'Slider'">
+                                        <div ng-repeat="option in newQuestionType.options" ng-show="validSlider">
+                                            <label><input type="radio" name="option"/> {{option.text_EN}}</label>
                                         </div>
+                                        <div ng-hide="validSlider"><p>Invalid slider options.</p></div>
                                     </div>
 
-                                    <div ng-if="atCategory.category_EN === 'Radio Button' || atCategory.category_EN === 'Slider'">
+                                    <div ng-if="atCategory.category_EN === 'Radio Button'">
                                         <div ng-repeat="option in newQuestionType.options">
-                                            <label><input type="radio" name="option"/> {{option.name_EN}}</label>
+                                            <label><input type="radio" name="option"/> {{option.text_EN}}</label>
                                         </div>
                                     </div>
 
                                     <div ng-if="atCategory.category_EN === 'Checkbox'">
                                         <div ng-repeat="option in newQuestionType.options">
-                                            <label><input type="checkbox" name="option"/> {{option.name_EN}}</label>
+                                            <label><input type="checkbox" name="option"/> {{option.text_EN}}</label>
                                         </div>
                                     </div>
 
@@ -358,21 +368,22 @@
                                 <div class="col-xs-12">
                                     <h4>Français</h4>
                                     <!-- Show category -->
-                                    <div ng-if="selectedAt.typeSerNum === '4'">
-                                        <div ng-repeat="option in newQuestionType.options">
-                                            <label><input type="radio" name="option"/> {{option.name_FR}}</label>
+                                    <div ng-if="atCategory.category_EN === 'Slider'">
+                                        <div ng-repeat="option in newQuestionType.options" ng-show="validSlider">
+                                            <label><input type="radio" name="option"/> {{option.text_FR}}</label>
                                         </div>
+                                        <div ng-hide="validSlider"><p>Options de la case de défilement invalides.</p></div>
                                     </div>
 
-                                    <div ng-if="atCategory.category_EN === 'Radio Button' || atCategory.category_EN === 'Slider'">
+                                    <div ng-if="atCategory.category_EN === 'Radio Button'">
                                         <div ng-repeat="option in newQuestionType.options">
-                                            <label><input type="radio" name="option"/> {{option.name_FR}}</label>
+                                            <label><input type="radio" name="option"/> {{option.text_FR}}</label>
                                         </div>
                                     </div>
 
                                     <div ng-if="atCategory.category_EN === 'Checkbox'">
                                         <div ng-repeat="option in newQuestionType.options">
-                                            <label><input type="checkbox" name="option"/> {{option.name_FR}}</label>
+                                            <label><input type="checkbox" name="option"/> {{option.text_FR}}</label>
                                         </div>
                                     </div>
 
