--- a/templates/questionnaire/add.question.html
+++ b/templates/questionnaire/add.question.html
@@ -48,32 +48,32 @@
                         <uib-accordion class="side-navbar">
 
                             <!-- SECTION: Question Text -->
-                            <div uib-accordion-group is-open="titleSection.open" class="panel-container summary-box" is-disabled="!newQuestion.text_EN && !newQuestion.text_FR">
+                            <div uib-accordion-group is-open="titleSection.open" class="panel-container summary-box" is-disabled="!newQuestion.question_EN && !newQuestion.question_FR">
                                 <uib-accordion-heading>
                                     <div class="row" style="align-items: center">
                                         <div class="col-md-2">
-                                            <span ng-if="newQuestion.text_EN && newQuestion.text_FR" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                                            <span ng-if="newQuestion.question_EN && newQuestion.question_FR" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
                                         </div>
                                         <div class="col-md-8">
                                             <strong>Question</strong>
                                         </div>
                                         <div class="col-md-2">
-                                            <i ng-if="newQuestion.text_EN || newQuestion.text_FR" class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
+                                            <i ng-if="newQuestion.question_EN || newQuestion.question_FR" class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleSection.open, 'glyphicon-chevron-right': !titleSection.open}"></i>
                                         </div>
                                     </div>
                                 </uib-accordion-heading>
-                                <div ng-if="newQuestion.text_EN" class="description">
+                                <div ng-if="newQuestion.question_EN" class="description">
                                     <p style="margin-botton:5px">
                                         <strong>EN</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                                        {{newQuestion.text_EN}}
+                                        {{newQuestion.question_EN}}
                                     </p>
                                 </div>
-                                <div ng-if="newQuestion.text_FR" class="description">
+                                <div ng-if="newQuestion.question_FR" class="description">
                                     <p style="margin-botton:5px">
                                         <strong>FR</strong>
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
-                                        {{newQuestion.text_FR}}
+                                        {{newQuestion.question_FR}}
                                     </p>
                                 </div>
                             </div>
@@ -226,30 +226,30 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-md-6">
-                                <div class="panel" ng-class="(newQuestion.text_EN) ? 'panel-success': 'panel-danger'">
+                                <div class="panel" ng-class="(newQuestion.question_EN) ? 'panel-success': 'panel-danger'">
                                     <div class="panel-heading"><strong>English</strong>
-                                        <span ng-hide="newQuestion.text_EN" style="float:right"><em>Incomplete</em></span>
-                                        <span ng-show="newQuestion.text_EN" style="float:right"><em>Complete</em></span>
+                                        <span ng-hide="newQuestion.question_EN" style="float:right"><em>Incomplete</em></span>
+                                        <span ng-show="newQuestion.question_EN" style="float:right"><em>Complete</em></span>
                                     </div>
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <textarea class="form-control" rows="2" ng-model="newQuestion.text_EN" ng-change="updateQuestionText()"></textarea>
+                                                <textarea class="form-control" rows="2" ng-model="newQuestion.question_EN" ng-change="updateQuestionText()"></textarea>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-md-6">
-                                <div class="panel" ng-class="(newQuestion.text_FR) ? 'panel-success': 'panel-danger'">
+                                <div class="panel" ng-class="(newQuestion.question_FR) ? 'panel-success': 'panel-danger'">
                                     <div class="panel-heading"><strong>Français</strong>
-                                        <span ng-hide="newQuestion.text_FR" style="float:right"><em>Incomplete</em></span>
-                                        <span ng-show="newQuestion.text_FR" style="float:right"><em>Complete</em></span>
+                                        <span ng-hide="newQuestion.question_FR" style="float:right"><em>Incomplete</em></span>
+                                        <span ng-show="newQuestion.question_FR" style="float:right"><em>Complete</em></span>
                                     </div>
                                     <div class="panel-body">
                                         <div class="row">
                                             <div class="col-md-12">
-                                                <textarea class="form-control" rows="2" ng-model="newQuestion.text_FR" ng-change="updateQuestionText()"></textarea>
+                                                <textarea class="form-control" rows="2" ng-model="newQuestion.question_FR" ng-change="updateQuestionText()"></textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -292,7 +292,7 @@
                                                 <ul class="list-items">
                                                     <li ng-repeat="at in atFilterList | filter: searchAtFilter">
                                                         <label>
-                                                            <input type="radio" name="{{at.name_EN}}" value="{{at.serNum}}" ng-model="newQuestion.typeId" ng-change="updateAt(at)"/> {{at.name_EN}} ({{at.category_EN}})
+                                                            <input type="radio" name="{{at.name_EN}}" value="{{at.ID}}" ng-model="newQuestion.typeId" ng-change="updateAt(at)"/> {{at.name_EN}} ({{at.category_EN}})
                                                         </label>
                                                     </li>
                                                 </ul>
@@ -307,43 +307,41 @@
                                 </p>
 
                                 <!-- Preview -->
-                                <div class="col-xs-12" ng-show="newQuestion.text_EN && newQuestion.text_FR && newQuestion.typeId">
-                                    <p ng-bind-html="newQuestion.text_EN + ' / ' + newQuestion.text_FR"></p>
+                                <div class="col-xs-12" ng-show="newQuestion.question_EN && newQuestion.question_FR && newQuestion.typeId">
+                                    <p ng-bind-html="newQuestion.question_EN + ' / ' + newQuestion.question_FR"></p>
 
                                     <!-- Show category -->
-                                    <div ng-if="selectedAt.typeSerNum === '4'">
+                                    <div ng-if="selectedAt.typeId === '4'">
                                         <div ng-repeat="option in selectedAt.options">
-                                            <label><input type="radio" name="option"/> {{option.text_EN}} / {{option.text_FR}}</label>
+                                            <label><input type="radio" name="option" disabled /> {{option.description_EN}} / {{option.description_FR}}</label>
                                         </div>
                                     </div>
 
-                                    <div ng-if="selectedAt.typeSerNum === '2'">
+                                    <div ng-if="selectedAt.typeId === '2'">
                                         <div ng-repeat="option in radiostep">
-                                            <label><input type="radio" name="option"/> {{option.name}}</label>
+                                            <label><input type="radio" name="option" disabled/> {{option.name}}</label>
                                         </div>
                                     </div>
-                                </div>
-
-                                <div ng-if="selectedAt.typeSerNum === '1'">
-                                    <div ng-repeat="option in selectedAt.options">
-                                        <label><input type="checkbox" name="option"/> {{option.text_EN}} / {{option.text_FR}}</label>
+                                    <div ng-if="selectedAt.typeId === '1'">
+                                        <div ng-repeat="option in selectedAt.options">
+                                            <label><input type="checkbox" name="option" disabled/> {{option.description_EN}} / {{option.description_FR}}</label>
+                                        </div>
                                     </div>
-                                </div>
 
-                                <div ng-if="selectedAt.typeSerNum === '3'">
-                                    <textarea style="width:80%" rows="10" placeholder="Please enter your answer."></textarea>
-                                </div>
+                                    <div ng-if="selectedAt.typeId === '3'">
+                                        <textarea style="width:80%" rows="10" placeholder="Please enter your answer." disabled></textarea>
+                                    </div>
 
-                                <div ng-if="selectedAt.typeSerNum === '7'">
-                                    <label>Enter your date: <input type="date"/></label>
-                                </div>
+                                    <div ng-if="selectedAt.typeId === '7'">
+                                        <label>Enter your date: <input type="date" disabled /></label>
+                                    </div>
 
-                                <div ng-if="selectedAt.typeSerNum === '6'">
-                                    <label>Enter your time: <input type="time"/></label>
+                                    <div ng-if="selectedAt.typeId === '6'">
+                                        <label>Enter your time: <input type="time" disabled /></label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <div class="row animated" ng-class="{fadeInUp: answerTypeSection.show}" ng-if="answerTypeSection.show">
                         <div class="col-xs-12 col-md-8">
@@ -369,8 +367,8 @@
                                     <div class="col-xs-12 col-md-8" ng-show="atCategory.category_EN === 'Checkbox' || atCategory.category_EN === 'Radio Button'">
                                         <div class="input-group" style="margin-top:5px; margin-bottom:5px;" ng-repeat="option in newAnswerType.options">
                                             <input class="form-control" style="width:20%" type="number" placeholder="Position" ng-model="option.order" required/>
-                                            <input class="form-control" style="width:40%" type="text" placeholder="Text (EN)" ng-model="option.text_EN" required/>
-                                            <input class="form-control" style="width:40%" type="text" placeholder="Text (FR)" ng-model="option.text_FR" required/>
+                                            <input class="form-control" style="width:40%" type="text" placeholder="Text (EN)" ng-model="option.description_EN" required/>
+                                            <input class="form-control" style="width:40%" type="text" placeholder="Text (FR)" ng-model="option.description_FR" required/>
                                             <span class="input-group-btn"><button class="btn btn-default" ng-click="deleteOptions(option)"><span class="fa fa-minus"></span> Delete</button></span>
                                         </div>
                                         <button type="button" class="btn btn-default" style="float: left; margin-top:5px;" ng-click="addOptions()"><span class="fa fa-plus"></span> Add option</button>
