--- a/templates/questionnaire/delete.question.html
+++ b/templates/questionnaire/delete.question.html
@@ -3,14 +3,14 @@
 		<span class="glyphicon glyphicon-trash"></span> Delete Question 
 	</h2>
 	<p class="modal-title-caption col-xs-12">
-		{{questionToDelete.text_EN}} / {{questionToDelete.text_FR}}
+		{{questionToDelete.question_EN}} / {{questionToDelete.question_FR}}
 	</p>
 </div>
 <div class="modal-body">
 	<div class="alert alert-danger" role="alert">
     <strong>Delete Question</strong><br>
     <p>
-      Are you sure you want to delete the question "{{questionToDelete.text_EN}}" ?
+      Are you sure you want to delete the question "{{questionToDelete.question_EN}}" ?
     </p>
   </div>
   <div class="row">
