--- a/templates/questionnaire/edit.question.html
+++ b/templates/questionnaire/edit.question.html
@@ -35,13 +35,13 @@
                     <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                         <div class="input-group">
                             <span class="input-group-addon">EN</span>
-                            <input type="text" class="form-control" ng-model="question.text_EN" placeholder="English Title" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
+                            <input type="text" class="form-control" ng-model="question.question_EN" placeholder="English Title" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6" style="margin-bottom: 10px;">
                         <div class="input-group">
                             <span class="input-group-addon">FR</span>
-                            <input type="text" class="form-control" ng-model="question.text_FR" placeholder="Titre Français" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
+                            <input type="text" class="form-control" ng-model="question.question_FR" placeholder="Titre Français" ng-change="setChangesMade()" ng-disabled="question.readOnly || question.final" />
                         </div>
                     </div>
             </div>
@@ -123,7 +123,7 @@
                         <div class="row">
                             <div ng-class="question.readOnly || question.final ? 'col-lg-6' : 'col-lg-12'">
                                 <h4 style="margin-top:10px;">English</h4>
-                                <p style="margin-top:10px; margin-bottom:10px"; ng-bind-html="question.text_EN"></p>
+                                <p style="margin-top:10px; margin-bottom:10px"; ng-bind-html="question.question_EN"></p>
                                 <div ng-if="question.typeId === '1'">
                                     <div ng-repeat="option in question.subOptions">
                                         <label><input type="checkbox" disabled> {{option.description_EN}}</label>
@@ -145,7 +145,7 @@
                             </div>
                             <div ng-class="question.readOnly || question.final ? 'col-lg-6' : 'col-lg-12'">
                                 <h4 style="margin-top:10px;">Français</h4>
-                                <p style="margin-top:10px; margin-bottom:10px"; ng-bind-html="question.text_FR"></p>
+                                <p style="margin-top:10px; margin-bottom:10px"; ng-bind-html="question.question_FR"></p>
                                 <div ng-if="question.typeId === '1'">
                                     <div ng-repeat="option in question.subOptions">
                                         <label><input type="checkbox" disabled> {{option.description_FR}}</label>
